ffi/pigpio.h

typedef struct
{
   uint32_t gpioOn;
   uint32_t gpioOff;
   uint32_t usDelay;
   uint32_t flags;
} rawWave_t;
typedef struct
{
   int clk;     
   int mosi;    
   int miso;    
   int ss_pol;  
   int ss_us;   
   int clk_pol; 
   int clk_pha; 
   int clk_us;  
} rawSPI_t;
typedef struct { 
   uint32_t info;
   uint32_t src;
   uint32_t dst;
   uint32_t length;
   uint32_t stride;
   uint32_t next;
   uint32_t pad[2];
} rawCbs_t;
typedef void (*eventFunc_t)        (int      event,
                                    uint32_t tick);
typedef void (*eventFuncEx_t)      (int      event,
                                    uint32_t tick,
                                    void    *userdata);
int gpioSetPad(unsigned pad, unsigned padStrength);
int eventMonitor(unsigned handle, uint32_t bits);
int eventSetFunc(unsigned event, eventFunc_t f);
int eventSetFuncEx(unsigned event, eventFuncEx_t f, void *userdata);
int eventTrigger(unsigned event);
int shell(char *scriptName, char *scriptString);
int fileOpen(char *file, unsigned mode);
int fileClose(unsigned handle);
int fileWrite(unsigned handle, char *buf, unsigned count);
int fileRead(unsigned handle, char *buf, unsigned count);
int fileSeek(unsigned handle, int32_t seekOffset, int seekFrom);
int fileList(char *fpat,  char *buf, unsigned count);
int gpioCfgBufferSize(unsigned cfgMillis);
int gpioCfgClock(
   unsigned cfgMicros, unsigned cfgPeripheral, unsigned cfgSource);
int gpioCfgDMAchannel(unsigned DMAchannel); 
int gpioCfgDMAchannels(unsigned primaryChannel, unsigned secondaryChannel);
int gpioCfgPermissions(uint64_t updateMask);
int gpioCfgSocketPort(unsigned port);
int gpioCfgInterfaces(unsigned ifFlags);
int gpioCfgMemAlloc(unsigned memAllocMode);
int gpioCfgNetAddr(int numSockAddr, uint32_t *sockAddr);
uint32_t gpioCfgGetInternals(void);
int gpioCfgSetInternals(uint32_t cfgVal);
int gpioCustom1(unsigned arg1, unsigned arg2, char *argx, unsigned argc);
int gpioCustom2(unsigned arg1, char *argx, unsigned argc,
                char *retBuf, unsigned retMax);
int rawWaveAddSPI(
   rawSPI_t *spi,
   unsigned offset,
   unsigned spiSS,
   char *buf,
   unsigned spiTxBits,
   unsigned spiBitFirst,
   unsigned spiBitLast,
   unsigned spiBits);
int rawWaveAddGeneric(unsigned numPulses, rawWave_t *pulses);
unsigned rawWaveCB(void);
rawCbs_t *rawWaveCBAdr(int cbNum);
uint32_t rawWaveGetOOL(int pos);
void rawWaveSetOOL(int pos, uint32_t lVal);
uint32_t rawWaveGetOut(int pos);
void rawWaveSetOut(int pos, uint32_t lVal);
uint32_t rawWaveGetIn(int pos);
void rawWaveSetIn(int pos, uint32_t lVal);
int getBitInBytes(int bitPos, char *buf, int numBits);
void putBitInBytes(int bitPos, char *buf, int bit);
double time_time(void);
void time_sleep(double seconds);
void rawDumpWave(void);
void rawDumpScript(unsigned script_id);