lib/src/bindings.dart


  int gpioSetPad(
    int pad,
    int padStrength,
  ) {
    _gpioSetPad ??=
        _dylib.lookupFunction<_c_gpioSetPad, _dart_gpioSetPad>('gpioSetPad');
    return _gpioSetPad(
      pad,
      padStrength,
    );
  }

  _dart_gpioSetPad _gpioSetPad;

  int eventMonitor(
    int handle,
    int bits,
  ) {
    _eventMonitor ??= _dylib
        .lookupFunction<_c_eventMonitor, _dart_eventMonitor>('eventMonitor');
    return _eventMonitor(
      handle,
      bits,
    );
  }

  _dart_eventMonitor _eventMonitor;

  int eventSetFunc(
    int event,
    ffi.Pointer<ffi.NativeFunction<eventFunc_t>> f,
  ) {
    _eventSetFunc ??= _dylib
        .lookupFunction<_c_eventSetFunc, _dart_eventSetFunc>('eventSetFunc');
    return _eventSetFunc(
      event,
      f,
    );
  }

  _dart_eventSetFunc _eventSetFunc;

  int eventSetFuncEx(
    int event,
    ffi.Pointer<ffi.NativeFunction<eventFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _eventSetFuncEx ??=
        _dylib.lookupFunction<_c_eventSetFuncEx, _dart_eventSetFuncEx>(
            'eventSetFuncEx');
    return _eventSetFuncEx(
      event,
      f,
      userdata,
    );
  }

  _dart_eventSetFuncEx _eventSetFuncEx;

  int eventTrigger(
    int event,
  ) {
    _eventTrigger ??= _dylib
        .lookupFunction<_c_eventTrigger, _dart_eventTrigger>('eventTrigger');
    return _eventTrigger(
      event,
    );
  }

  _dart_eventTrigger _eventTrigger;

  int shell(
    ffi.Pointer<ffi.Int8> scriptName,
    ffi.Pointer<ffi.Int8> scriptString,
  ) {
    _shell ??= _dylib.lookupFunction<_c_shell, _dart_shell>('shell');
    return _shell(
      scriptName,
      scriptString,
    );
  }

  _dart_shell _shell;

  int fileOpen(
    ffi.Pointer<ffi.Int8> file,
    int mode,
  ) {
    _fileOpen ??=
        _dylib.lookupFunction<_c_fileOpen, _dart_fileOpen>('fileOpen');
    return _fileOpen(
      file,
      mode,
    );
  }

  _dart_fileOpen _fileOpen;

  int fileClose(
    int handle,
  ) {
    _fileClose ??=
        _dylib.lookupFunction<_c_fileClose, _dart_fileClose>('fileClose');
    return _fileClose(
      handle,
    );
  }

  _dart_fileClose _fileClose;

  int fileWrite(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _fileWrite ??=
        _dylib.lookupFunction<_c_fileWrite, _dart_fileWrite>('fileWrite');
    return _fileWrite(
      handle,
      buf,
      count,
    );
  }

  _dart_fileWrite _fileWrite;

  int fileRead(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _fileRead ??=
        _dylib.lookupFunction<_c_fileRead, _dart_fileRead>('fileRead');
    return _fileRead(
      handle,
      buf,
      count,
    );
  }

  _dart_fileRead _fileRead;

  int fileSeek(
    int handle,
    int seekOffset,
    int seekFrom,
  ) {
    _fileSeek ??=
        _dylib.lookupFunction<_c_fileSeek, _dart_fileSeek>('fileSeek');
    return _fileSeek(
      handle,
      seekOffset,
      seekFrom,
    );
  }

  _dart_fileSeek _fileSeek;

  int fileList(
    ffi.Pointer<ffi.Int8> fpat,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _fileList ??=
        _dylib.lookupFunction<_c_fileList, _dart_fileList>('fileList');
    return _fileList(
      fpat,
      buf,
      count,
    );
  }

  _dart_fileList _fileList;

  int gpioCfgBufferSize(
    int cfgMillis,
  ) {
    _gpioCfgBufferSize ??=
        _dylib.lookupFunction<_c_gpioCfgBufferSize, _dart_gpioCfgBufferSize>(
            'gpioCfgBufferSize');
    return _gpioCfgBufferSize(
      cfgMillis,
    );
  }

  _dart_gpioCfgBufferSize _gpioCfgBufferSize;

  int gpioCfgClock(
    int cfgMicros,
    int cfgPeripheral,
    int cfgSource,
  ) {
    _gpioCfgClock ??= _dylib
        .lookupFunction<_c_gpioCfgClock, _dart_gpioCfgClock>('gpioCfgClock');
    return _gpioCfgClock(
      cfgMicros,
      cfgPeripheral,
      cfgSource,
    );
  }

  _dart_gpioCfgClock _gpioCfgClock;

  int gpioCfgDMAchannel(
    int DMAchannel,
  ) {
    _gpioCfgDMAchannel ??=
        _dylib.lookupFunction<_c_gpioCfgDMAchannel, _dart_gpioCfgDMAchannel>(
            'gpioCfgDMAchannel');
    return _gpioCfgDMAchannel(
      DMAchannel,
    );
  }

  _dart_gpioCfgDMAchannel _gpioCfgDMAchannel;

  int gpioCfgDMAchannels(
    int primaryChannel,
    int secondaryChannel,
  ) {
    _gpioCfgDMAchannels ??=
        _dylib.lookupFunction<_c_gpioCfgDMAchannels, _dart_gpioCfgDMAchannels>(
            'gpioCfgDMAchannels');
    return _gpioCfgDMAchannels(
      primaryChannel,
      secondaryChannel,
    );
  }

  _dart_gpioCfgDMAchannels _gpioCfgDMAchannels;

  int gpioCfgPermissions(
    int updateMask,
  ) {
    _gpioCfgPermissions ??=
        _dylib.lookupFunction<_c_gpioCfgPermissions, _dart_gpioCfgPermissions>(
            'gpioCfgPermissions');
    return _gpioCfgPermissions(
      updateMask,
    );
  }

  _dart_gpioCfgPermissions _gpioCfgPermissions;

  int gpioCfgSocketPort(
    int port,
  ) {
    _gpioCfgSocketPort ??=
        _dylib.lookupFunction<_c_gpioCfgSocketPort, _dart_gpioCfgSocketPort>(
            'gpioCfgSocketPort');
    return _gpioCfgSocketPort(
      port,
    );
  }

  _dart_gpioCfgSocketPort _gpioCfgSocketPort;

  int gpioCfgInterfaces(
    int ifFlags,
  ) {
    _gpioCfgInterfaces ??=
        _dylib.lookupFunction<_c_gpioCfgInterfaces, _dart_gpioCfgInterfaces>(
            'gpioCfgInterfaces');
    return _gpioCfgInterfaces(
      ifFlags,
    );
  }

  _dart_gpioCfgInterfaces _gpioCfgInterfaces;

  int gpioCfgMemAlloc(
    int memAllocMode,
  ) {
    _gpioCfgMemAlloc ??=
        _dylib.lookupFunction<_c_gpioCfgMemAlloc, _dart_gpioCfgMemAlloc>(
            'gpioCfgMemAlloc');
    return _gpioCfgMemAlloc(
      memAllocMode,
    );
  }

  _dart_gpioCfgMemAlloc _gpioCfgMemAlloc;

  int gpioCfgNetAddr(
    int numSockAddr,
    ffi.Pointer<ffi.Uint32> sockAddr,
  ) {
    _gpioCfgNetAddr ??=
        _dylib.lookupFunction<_c_gpioCfgNetAddr, _dart_gpioCfgNetAddr>(
            'gpioCfgNetAddr');
    return _gpioCfgNetAddr(
      numSockAddr,
      sockAddr,
    );
  }

  _dart_gpioCfgNetAddr _gpioCfgNetAddr;

  int gpioCfgGetInternals() {
    _gpioCfgGetInternals ??= _dylib.lookupFunction<_c_gpioCfgGetInternals,
        _dart_gpioCfgGetInternals>('gpioCfgGetInternals');
    return _gpioCfgGetInternals();
  }

  _dart_gpioCfgGetInternals _gpioCfgGetInternals;

  int gpioCfgSetInternals(
    int cfgVal,
  ) {
    _gpioCfgSetInternals ??= _dylib.lookupFunction<_c_gpioCfgSetInternals,
        _dart_gpioCfgSetInternals>('gpioCfgSetInternals');
    return _gpioCfgSetInternals(
      cfgVal,
    );
  }

  _dart_gpioCfgSetInternals _gpioCfgSetInternals;

  int gpioCustom1(
    int arg1,
    int arg2,
    ffi.Pointer<ffi.Int8> argx,
    int argc,
  ) {
    _gpioCustom1 ??=
        _dylib.lookupFunction<_c_gpioCustom1, _dart_gpioCustom1>('gpioCustom1');
    return _gpioCustom1(
      arg1,
      arg2,
      argx,
      argc,
    );
  }

  _dart_gpioCustom1 _gpioCustom1;

  int gpioCustom2(
    int arg1,
    ffi.Pointer<ffi.Int8> argx,
    int argc,
    ffi.Pointer<ffi.Int8> retBuf,
    int retMax,
  ) {
    _gpioCustom2 ??=
        _dylib.lookupFunction<_c_gpioCustom2, _dart_gpioCustom2>('gpioCustom2');
    return _gpioCustom2(
      arg1,
      argx,
      argc,
      retBuf,
      retMax,
    );
  }

  _dart_gpioCustom2 _gpioCustom2;

  int rawWaveAddSPI(
    ffi.Pointer<rawSPI_t> spi,
    int offset,
    int spiSS,
    ffi.Pointer<ffi.Int8> buf,
    int spiTxBits,
    int spiBitFirst,
    int spiBitLast,
    int spiBits,
  ) {
    _rawWaveAddSPI ??= _dylib
        .lookupFunction<_c_rawWaveAddSPI, _dart_rawWaveAddSPI>('rawWaveAddSPI');
    return _rawWaveAddSPI(
      spi,
      offset,
      spiSS,
      buf,
      spiTxBits,
      spiBitFirst,
      spiBitLast,
      spiBits,
    );
  }

  _dart_rawWaveAddSPI _rawWaveAddSPI;

  int rawWaveAddGeneric(
    int numPulses,
    ffi.Pointer<rawWave_t> pulses,
  ) {
    _rawWaveAddGeneric ??=
        _dylib.lookupFunction<_c_rawWaveAddGeneric, _dart_rawWaveAddGeneric>(
            'rawWaveAddGeneric');
    return _rawWaveAddGeneric(
      numPulses,
      pulses,
    );
  }

  _dart_rawWaveAddGeneric _rawWaveAddGeneric;

  int rawWaveCB() {
    _rawWaveCB ??=
        _dylib.lookupFunction<_c_rawWaveCB, _dart_rawWaveCB>('rawWaveCB');
    return _rawWaveCB();
  }

  _dart_rawWaveCB _rawWaveCB;

  ffi.Pointer<rawCbs_t> rawWaveCBAdr(
    int cbNum,
  ) {
    _rawWaveCBAdr ??= _dylib
        .lookupFunction<_c_rawWaveCBAdr, _dart_rawWaveCBAdr>('rawWaveCBAdr');
    return _rawWaveCBAdr(
      cbNum,
    );
  }

  _dart_rawWaveCBAdr _rawWaveCBAdr;

  int rawWaveGetOOL(
    int pos,
  ) {
    _rawWaveGetOOL ??= _dylib
        .lookupFunction<_c_rawWaveGetOOL, _dart_rawWaveGetOOL>('rawWaveGetOOL');
    return _rawWaveGetOOL(
      pos,
    );
  }

  _dart_rawWaveGetOOL _rawWaveGetOOL;

  void rawWaveSetOOL(
    int pos,
    int lVal,
  ) {
    _rawWaveSetOOL ??= _dylib
        .lookupFunction<_c_rawWaveSetOOL, _dart_rawWaveSetOOL>('rawWaveSetOOL');
    return _rawWaveSetOOL(
      pos,
      lVal,
    );
  }

  _dart_rawWaveSetOOL _rawWaveSetOOL;

  int rawWaveGetOut(
    int pos,
  ) {
    _rawWaveGetOut ??= _dylib
        .lookupFunction<_c_rawWaveGetOut, _dart_rawWaveGetOut>('rawWaveGetOut');
    return _rawWaveGetOut(
      pos,
    );
  }

  _dart_rawWaveGetOut _rawWaveGetOut;

  void rawWaveSetOut(
    int pos,
    int lVal,
  ) {
    _rawWaveSetOut ??= _dylib
        .lookupFunction<_c_rawWaveSetOut, _dart_rawWaveSetOut>('rawWaveSetOut');
    return _rawWaveSetOut(
      pos,
      lVal,
    );
  }

  _dart_rawWaveSetOut _rawWaveSetOut;

  int rawWaveGetIn(
    int pos,
  ) {
    _rawWaveGetIn ??= _dylib
        .lookupFunction<_c_rawWaveGetIn, _dart_rawWaveGetIn>('rawWaveGetIn');
    return _rawWaveGetIn(
      pos,
    );
  }

  _dart_rawWaveGetIn _rawWaveGetIn;

  void rawWaveSetIn(
    int pos,
    int lVal,
  ) {
    _rawWaveSetIn ??= _dylib
        .lookupFunction<_c_rawWaveSetIn, _dart_rawWaveSetIn>('rawWaveSetIn');
    return _rawWaveSetIn(
      pos,
      lVal,
    );
  }

  _dart_rawWaveSetIn _rawWaveSetIn;

  int getBitInBytes(
    int bitPos,
    ffi.Pointer<ffi.Int8> buf,
    int numBits,
  ) {
    _getBitInBytes ??= _dylib
        .lookupFunction<_c_getBitInBytes, _dart_getBitInBytes>('getBitInBytes');
    return _getBitInBytes(
      bitPos,
      buf,
      numBits,
    );
  }

  _dart_getBitInBytes _getBitInBytes;

  void putBitInBytes(
    int bitPos,
    ffi.Pointer<ffi.Int8> buf,
    int bit,
  ) {
    _putBitInBytes ??= _dylib
        .lookupFunction<_c_putBitInBytes, _dart_putBitInBytes>('putBitInBytes');
    return _putBitInBytes(
      bitPos,
      buf,
      bit,
    );
  }

  _dart_putBitInBytes _putBitInBytes;

  double time_time() {
    _time_time ??=
        _dylib.lookupFunction<_c_time_time, _dart_time_time>('time_time');
    return _time_time();
  }

  _dart_time_time _time_time;

  void time_sleep(
    double seconds,
  ) {
    _time_sleep ??=
        _dylib.lookupFunction<_c_time_sleep, _dart_time_sleep>('time_sleep');
    return _time_sleep(
      seconds,
    );
  }

  _dart_time_sleep _time_sleep;

  void rawDumpWave() {
    _rawDumpWave ??=
        _dylib.lookupFunction<_c_rawDumpWave, _dart_rawDumpWave>('rawDumpWave');
    return _rawDumpWave();
  }

  _dart_rawDumpWave _rawDumpWave;

  void rawDumpScript(
    int script_id,
  ) {
    _rawDumpScript ??= _dylib
        .lookupFunction<_c_rawDumpScript, _dart_rawDumpScript>('rawDumpScript');
    return _rawDumpScript(
      script_id,
    );
  }

  _dart_rawDumpScript _rawDumpScript;
}

class __darwin_pthread_handler_rec extends ffi.Struct {
  ffi.Pointer<ffi.NativeFunction<_typedefC_1>> __routine;

  ffi.Pointer<ffi.Void> __arg;

  ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

class _opaque_pthread_attr_t extends ffi.Struct {}

class _opaque_pthread_cond_t extends ffi.Struct {}

class _opaque_pthread_condattr_t extends ffi.Struct {}

class _opaque_pthread_mutex_t extends ffi.Struct {}
